--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ ul{
     @import url('https://fonts.googleapis.com/css?family=Gochi+Hand');
 
 .content {
-  background-color: turquoise;
+  background-color:#479ed8;
   padding:2rem;
         margin:2rem;
 }
